fix: change 1em to $spacing-default

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-  padding: 0 1em;
+  padding: 0 $spacing-default;
   max-width: $bp-wide;
   margin: 0 auto;
   width: 100%;
