--- a/src/site/_includes/components/header/header.scss
+++ b/src/site/_includes/components/header/header.scss
@@ -17,8 +17,8 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid $color-darkyellow;
-    padding: 1em;
-    margin: 0 -1em;
+    padding: $spacing-default;
+    margin: 0 -$spacing-default;
 
     button {
       position: relative;
@@ -45,7 +45,7 @@
       color: $color-black;
       font-size: 1.125em;
       text-decoration: none;
-      padding: 1em;
+      padding: $spacing-default;
       border-bottom: 1px solid $color-lightgray;
     }
   }
